--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,5 +23,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/btn_register"
         android:text="register"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_home"
+        android:text="HOME"/>
 
 </LinearLayout>
