--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -24,7 +24,7 @@
         android:src="@drawable/avatar"
         android:id="@+id/avatar"/>
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/username"
             android:text="Danil"
             android:textSize="22sp"
             android:layout_centerHorizontal="true"
@@ -36,32 +36,119 @@
             android:text="a@example.com"
             android:textSize="14sp"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/name"
+            android:layout_below="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </RelativeLayout>
 
-    <EditText
-        android:hint="change name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+    <!--<EditText-->
+        <!--android:hint="change name"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"/>-->
 
     <LinearLayout
-        android:padding="16dp"
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp"
+
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <TextView
-        android:text="Name:"
+        android:text="Age:"
         android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
-        android:text="Danil"
+        android:text="20"
         android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"/>
+
     </LinearLayout>
 
+    <LinearLayout
+        android:paddingLeft="16dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <TextView
+        android:text="Gender:"
+        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:text="Male"
+        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:paddingLeft="16dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="Height:"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:text="5'10'"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView3"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:paddingLeft="16dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="Weight:"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:text="70KG"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView4"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:paddingLeft="16dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="PhoneNumber:"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:text="6825970000"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView5"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:padding="26dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <Button
+        android:text="Edit"
+        android:layout_width="116dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2"/>
+    </LinearLayout>
 </LinearLayout>
+
