--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -148,7 +148,7 @@
         android:text="Edit"
         android:layout_width="116dp"
         android:layout_height="wrap_content"
-        android:id="@+id/button2"/>
+        android:id="@+id/btn_editprofile"/>
     </LinearLayout>
 </LinearLayout>
 
