--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="username:"
+            android:text="Username:"
             android:textSize="18sp"/>
 
         <EditText
@@ -24,6 +24,71 @@
             android:layout_height="wrap_content"
             android:hint="change name"
             android:text="xiaolei"/>
+    </LinearLayout>
+    // realname
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+        android:paddingLeft="16dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Realname:"
+            android:textSize="18sp"/>
+
+        <EditText
+            android:id="@+id/editT_realname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="change name"
+            android:text="xiaolei"/>
+    </LinearLayout>
+    // password 1
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+        android:paddingLeft="16dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Password:"
+        android:textSize="18sp"/>
+
+        <EditText
+            android:hint="change password"
+            android:text="123"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:id="@+id/editT_password1"/>
+    </LinearLayout>
+    // password 2
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+        android:paddingLeft="16dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ConfirmPassword:"
+            android:textSize="18sp"/>
+
+        <EditText
+            android:hint="change password"
+            android:text="123"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:id="@+id/editT_password2"/>
     </LinearLayout>
 // age
     <LinearLayout
@@ -36,7 +101,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="age:"
+            android:text="Age:"
             android:textSize="18sp"/>
 
         <EditText
@@ -57,7 +122,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="gender:"
+            android:text="Gender:"
             android:textSize="18sp"/>
 
         <EditText
@@ -78,7 +143,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="height:"
+            android:text="Height:"
             android:textSize="18sp"/>
 
         <EditText
@@ -99,7 +164,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="weight:"
+            android:text="Weight:"
             android:textSize="18sp"/>
 
         <EditText
