--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,10 +28,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/etPassword"
         android:padding="10dp"
+        android:inputType="textPassword"
         android:layout_marginBottom="@dimen/medium_margin"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/etUsername"
-
         android:hint="Password"/>
     <ImageView
         android:layout_width="@dimen/small_icon"
@@ -96,7 +96,7 @@
         android:layout_marginTop="@dimen/small_margin"
         android:layout_marginRight="@dimen/large_margin"
         android:id="@+id/btn_register"
-        android:textAppearance="?android:textAppearanceLarge"
+        android:textAppearance="?android:textAppearanceMedium"
         android:textColor="@color/googleRed"
         android:background="@null"
         android:text="Sign Up"/>
@@ -107,7 +107,6 @@
         android:layout_below="@id/horizontal_line"
         android:layout_toLeftOf="@id/btn_register"
         android:layout_marginTop="@dimen/small_margin"
-        android:layout_marginRight="@dimen/small_margin"
         android:layout_alignBaseline="@id/btn_register"
         android:id="@+id/register_text"
         android:text="Don't have an account?"/>
