--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.along.android.healthmanagement.NavigationDrawerActivity"
+    tools:context="com.along.android.healthmanagement.activities.NavigationDrawerActivity"
     tools:showIn="@layout/app_bar_navigation_drawer">
 
     <LinearLayout
