--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -74,6 +74,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black3"
+                    android:checked="true"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:text="Male"/>
 
