--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -110,4 +110,17 @@
         android:layout_alignBaseline="@id/btn_register"
         android:id="@+id/register_text"
         android:text="Don't have an account?"/>
+
+    <Button
+        android:id="@+id/btn_forget_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/register_text"
+        android:layout_marginTop="@dimen/small_margin"
+        android:layout_centerHorizontal="true"
+        android:background="?android:attr/selectableItemBackground"
+        android:textColor="@color/linkBlue"
+        android:textAllCaps="false"
+        android:text="Forget password?"/>
+
 </RelativeLayout>
