--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
+    <dimen name="toolbar_height">80dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="small_icon">24dp</dimen>
     <dimen name="small_margin">5dp</dimen>
