--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -141,14 +141,14 @@
             <!--android:layout_marginBottom="@dimen/medium_margin"-->
             <!--android:orientation="horizontal">-->
             <RadioGroup
-                android:id="@+id/radioGroupGender"
+                android:id="@+id/radioGroupGenderProfile"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".6"
                 android:layout_marginBottom="@dimen/medium_margin"
                 android:orientation="horizontal">
                 <RadioButton
-                    android:id="@+id/radioMale"
+                    android:id="@+id/radioMaleProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black3"
@@ -157,7 +157,7 @@
                     android:text="Male"/>
 
                 <RadioButton
-                    android:id="@+id/radioFemale"
+                    android:id="@+id/radioFemaleProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black3"
