--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.along.android.healthmanagement.fragments.MedicationFragment">
+    tools:context="com.along.android.healthmanagement.fragments.DietFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Medication" />
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
